# cDataScience

./: .gitignore  README.md  bloom_10079516.out  environment.yml  pyproject.toml  requirements.txt  run_benchmark.sh
benchmarks/: benchmark.py
notebooks/: compression_analysis.ipynb  false_positive_analysis.ipynb
src/bloom_filter/: __init.py__  __init__.py  base.py  bloom.py  hashes.py
tests/: __init__.py  test_bloom.py  test_hashes.py
